--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name = "Jäger"
+name = "Jager"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.38"
+colored = "2.1.0"
+futures-util = "0.3.31"
+serde = {version="1.0.215", features = ["derive"]}
+serde_json = "1.0.133"
+tokio = {version = "1.41.1", features=["full"]}
+tokio-tungstenite = {version = "*", features=["native-tls"]}
+url = "2.5.4"
